# DecentralizedComputing

./: .gitignore  CMakeLists.txt  LICENSE  PendingPrimeCalculation.cpp  PendingPrimeCalculation.h  PrimeHelpers.h  PrimeNumberLibrary.cpp  PrimeNumberLibrary.h  SortedDoublyLinkedList.cpp  SortedDoublyLinkedList.h  SortedDoublyLinkedListIterator.h  bigint.cpp  bigint.h  entry.h  main.cpp  readme.md  stdafx.h
